syntax = "proto3";

import "tensors.proto";
import "graph_sage_common.proto";

option java_package = "org.neo4j.gds.core.model.proto";
option java_outer_classname = "GraphSageProto";

message GraphSageModel {
  ModelData data = 1;
  FeatureFunction featureFunction = 2;
}

message FeatureFunction {
  FeatureFunctionType functionType = 1;
  map<string, Matrix> weightsByLabel = 2;
  int32 projectedFeatureDimension = 3;
}

enum FeatureFunctionType {
  SINGLE = 0;
  MULTI = 1;
}

message ModelData {
  repeated Layer layers = 1;
}

message Layer {
  oneof aggregator {
    MeanAggregator mean = 1;
    MaxPoolingAggregator pool = 2;
  }

  int32 sampleSize = 3;
  int64 randomState = 4;
}

message MeanAggregator {
  Matrix weights = 1;
  ActivationFunction activationFunction = 2;
}

message MaxPoolingAggregator {
  Matrix poolWeights = 1;
  Matrix selfWeights = 2;
  Matrix neighborsWeights = 3;
  Vector bias = 4;
  ActivationFunction activationFunction = 5;
}

message GraphSageMetrics {
  double startLoss = 1;
  repeated double epochLosses = 2;
  bool didConverge = 3;
}
